--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,25 +6,24 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-color-primary: #14678a;
+  --ifm-color-primary-dark: #125d7c;
+  --ifm-color-primary-darker: #115875;
+  --ifm-color-primary-darkest: #0e4861;
+  --ifm-color-primary-light: #167198;
+  --ifm-color-primary-lighter: #17769f;
+  --ifm-color-primary-lightest: #1a86b3;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #2d9ed7;
+  --ifm-color-primary-dark: #258fc5;
+  --ifm-color-primary-darker: #2387ba;
+  --ifm-color-primary-darkest: #1d6f99;
+  --ifm-color-primary-light: #43a8db;
+  --ifm-color-primary-lighter: #4eaddd;
+  --ifm-color-primary-lightest: #6fbce3;
 }
 
 .docusaurus-highlight-code-line {
